# OrangePiZero3-StereoDepth

./: .gitignore  CMakeLists.txt  README.md  package.xml
calibration_results/: calibration_report.txt  stereo_calibration.yml  日志.txt  默认文件说明.txt
config/: global_config.yaml
docs/: 代码规范.txt  函数对照表.txt  开发日志.txt  目标.txt  给AI看的.txt
include/: common_defines.h
minimal_test/: T.sh  日志.txt
minimal_test/0level/: build_and_run.sh  minimal.comp  simple_test.cpp
minimal_test/1level/: build_and_run.sh  compute.comp  test.cpp
minimal_test/2level/: build_and_run.sh  compute.comp  test.cpp
minimal_test/3level/: build_and_run.sh  compute.comp  test.cpp
minimal_test/4level/: build_and_run.sh  compute.comp  test.cpp
minimal_test/5level/: build_and_run.sh  compute_stage1.comp  compute_stage2.comp  test.cpp
scripts/: build.sh  run.sh
shaders/source/: census_transform.comp  cost_computation.comp  post_processing.comp  wta_optimization.comp
src/: main.cpp  test.cpp
src/calibration/: CMakeLists.txt  calibration_loader.cpp  stereo_calibrator.cpp  stereo_calibrator.hpp  stereo_calibrator_main.cpp  stereo_rectifier.cpp  stereo_rectifier.hpp  test_calibration.cpp  日志.txt
src/camera/: CMakeLists.txt  camera_factory.cpp  mock_camera.cpp
src/cpu_stereo/: CMakeLists.txt  cpu_stereo_matcher.cpp  cpu_stereo_matcher.hpp
src/ros2_node/: stereo_depth_node.cpp
src/ros2_node/config/: params.yaml
src/ros2_node/launch/: stereo_depth_launch.py
src/utils/: config.cpp  config.hpp
src/vulkan/: CMakeLists.txt  buffer_manager.cpp  buffer_manager.hpp  compute_pipeline.cpp  compute_pipeline.hpp  context.cpp  context.hpp  shaders.cpp  stereo_pipeline.cpp  stereo_pipeline.hpp
src/vulkan/shaders/: aggregation.comp  census.comp  cost.comp  cost_wta.comp  downsample.comp  postprocess.comp  test.comp  wta.comp
tools/: build.sh  check_vulkan.sh  diagnose.sh  generate_pyramid_config.py  generate_shader_config.py  merge_shader.py  run.sh  test_vulkan.sh  troubleshoot.sh
utils/: config_manager.h
